# proyecto-ing-software

./: .gitignore  Programa.py  README  README.md  pyproject.toml  requirements.txt
assets/: 2_script.js  style.css
datos-de-prueba/: clientes.csv  productos.csv  productos_venta.csv  ventas.csv
informes_cli/: __init__.py  __main__.py  cli.py  datos.py  modelo.py
informes_cli/comandos/: __init__.py  examinar.py  examinar_agrupado.py  graficar.py
