[project]
name = "proyecto-ing-software"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.7.1",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.241126",
    "marimo>=0.11.13",
]

[tool.mypy]
python_version = "3.10"
strict = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["Programa.py", "assets/*"]
